--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
         "underscore.string": "~2.3.3",
         "kendo-ui": "~2013.3.1119",
         "plupload-bower": "1.5.7",
+        "plupload": "1.5.7",
         "es5-shim": "~2.1",
         "wingspan-forms": "50f83918230b053c3a3de2e7c44e0b5c26c4c9dd"
     }
