--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "grunt-contrib-requirejs": "~0.4.1",
         "grunt-contrib-less": "~0.7.0",
         "grunt-react": "~0.4.0",
-        "grunt-bower-task": "~0.3.4",
+        "grunt-bower-task": "0.4.0",
         "grunt-subgrunt": "~0.2.4",
         "grunt-contrib-clean": "~0.5.0",
         "grunt-contrib-copy": "~0.5.0"
